--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ google-generativeai==0.5.4
 langchain-anthropic==0.1.15
 langchain-community>=0.3.0,<0.4.0
 langchain-core==0.2.5
-langchain-experimental==0.3.3
+#langchain-experimental==0.3.3
 langchain-openai==0.1.8
 numpy==1.26.4
 openai==1.33.0
