--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ absl-py==2.1.0
 aiofiles==24.1.0
 aiohappyeyeballs==2.4.3
 aiohttp==3.9.5
-anthropic==0.28.0
+anthropic>=0.39.0
 beautifulsoup4==4.12.3
 chromadb==0.5.0
 fastapi==0.111.0
