--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,28 @@
-absl-py==2.1.0
-aiofiles==24.1.0
-aiohappyeyeballs==2.4.3
-aiohttp==3.9.5
-anthropic>=0.39.0
-beautifulsoup4==4.12.3
-chromadb==0.5.0
-fastapi==0.111.0
-firebase-admin==6.5.0
-google-ai-generativelanguage==0.6.4
-google-generativeai==0.5.4
-langchain-anthropic>=0.2.0
-langchain-openai>=0.2.0 
-langchain-community>=0.3.0
-langchain-core>=0.3.0
-numpy==1.26.4
-openai==1.33.0
-pandas==2.2.3
-pillow==10.3.0
-pydantic==2.9.2
-python-dotenv==1.0.1
-requests==2.32.3
-scikit-learn==1.5.0
-sentence-transformers==3.0.1
-torch==2.5.1
-transformers==4.41.2
-unstructured==0.16.8
-uvicorn==0.30.1
+absl-py
+aiofiles
+aiohappyeyeballs
+aiohttp
+anthropic
+beautifulsoup4
+chromadb
+fastapi
+firebase-admin
+google-ai-generativelanguage
+google-generativeai
+langchain-anthropic
+langchain-openai
+langchain-community
+langchain-core
+numpy
+openai
+pandas
+pillow
+pydantic
+python-dotenv
+requests
+scikit-learn
+sentence-transformers
+torch
+transformers
+unstructured
+uvicorn
